bugfix horizontal scroll
- prevents horizontal scrolling in expenses list

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -190,6 +190,7 @@ h1, body {
 
 #main {
     padding: 5px;
+    overflow-x: hidden;
 }
 
 .naviDotsGetStarted{
